--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                     <div class="price">€17</div>
 
-                    <a href="https://pay.hotmart.com/Y103371153Q?off=qf10zah7&checkoutMode=10&bid=1765497790157" class="cta-button">Jetzt Beginnen</a>
+                    <a href="https://pay.hotmart.com/O103396570T?off=qwjfgy2d&bid=1765857658556" class="cta-button">Jetzt Beginnen</a>
                 </div>
 
                 <div class="offer-box">
@@ -307,7 +307,7 @@
 
                     <div class="price">€35</div>
 
-                    <a href="https://pay.hotmart.com/Y103371153Q?off=ietpvjnb&checkoutMode=10&bid=1765497817150" class="cta-button">Vollen Zugang Sichern</a>
+                    <a href="https://pay.hotmart.com/O103396570T?off=y77dscb1&bid=1765857666052" class="cta-button">Vollen Zugang Sichern</a>
                 </div>
             </div>
 
@@ -323,7 +323,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Emotionale Blindage | Alle Rechte vorbeitos</p>
+        <p>© 2025 Emotionale Blindage | Alle Rechte vorbehalten</p>
         <p>In Zeiten, in denen die psychische Gesundheit unter beispiellosem Druck steht, bieten wir wissenschaftliche Werkzeuge emotionaler Resilienz. Geschützt durch die deutsche Meinungsfreiheit (Art. 5 GG), fokussiert auf individuelles Wohlbefinden, nicht auf Politik.</p>
     </footer>
 </body>
