--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                     <div class="price">€17</div>
 
-                    <a href="https://pay.hotmart.com/O103396570T?off=qwjfgy2d&bid=1765857658556" class="cta-button">Jetzt Beginnen</a>
+                    <a href="https://pay.hotmart.com/O103396570T?off=qwjfgy2d&checkoutMode=10" class="cta-button">Jetzt Beginnen</a>
                 </div>
 
                 <div class="offer-box">
@@ -307,7 +307,7 @@
 
                     <div class="price">€35</div>
 
-                    <a href="https://pay.hotmart.com/O103396570T?off=y77dscb1&bid=1765857666052" class="cta-button">Vollen Zugang Sichern</a>
+                    <a href="https://pay.hotmart.com/O103396570T?off=y77dscb1&checkoutMode=10" class="cta-button">Vollen Zugang Sichern</a>
                 </div>
             </div>
 
